# linux-programing

./: .gitignore  README.md
big-little-endian/: CMakeLists.txt  main.c
dll/: CMakeLists.txt  application.c  build_by_so.sh  dll.c  dll.h  dll_utils.c  makefile
dll/include/: dll.h
dll/src/: application.c  dll.c  dll_utils.c
ipc/: IPC.xmind
ipc/queue/: CMakeLists.txt  receiver.c  sender.c
ipc/socket/: CMakeLists.txt  sync.test.in
ipc/socket/unix_domain/: client_tcp.c  server_multiplexing_tcp.c  server_tcp.c
ipc/socket/unix_domain/sync/: client.c  common.c  common.h  route_manager_server.c
memory/: CMakeLists.txt  inspect.sh  mem-layout.c  my_malloc.c  stack-corruption.c
socket/: CMakeLists.txt  Makefile  client.c  server.c
timers/: CMakeLists.txt  main.c
tlv/: CMakeLists.txt  main.c  serialize.c  serialize.h
